--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       - id: black
         language_version: python3
         args: ["--line-length", "120"]
--   repo: https://github.com/lorenzwalthert/precommit
-    rev: v0.3.2
-    hooks:
-    -   id: lintr
+#-   repo: https://github.com/lorenzwalthert/precommit
+#    rev: v0.3.2
+#    hooks:
+#    -   id: lintr
